# block_copy_command

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  META.json  Makefile  README.md  block_copy_command.control  buildkit.yaml  docker-compose.yml
.github/workflows/: ci.yml
buildkit/: pg_block_copy.yaml
sql/: block_copy_command--0.1.4--0.1.5.sql  hooks.sql
src/: lib.rs
tests/docker/: test.sh
tests/pg_regress/expected/: copy_blocked.out
tests/pg_regress/sql/: copy_blocked.sql  setup.sql
