[package]
name = "block_copy_command"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL extension that blocks COPY commands via a configurable ProcessUtility hook"
authors = ["RustWizard"]
repository = "https://github.com/rustwizard/block_copy_command"
homepage = "https://github.com/rustwizard/block_copy_command"
license = "BSD-3-Clause"
keywords = ["postgresql", "pgrx", "security", "copy", "hook"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_block_copy_command"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx = "=0.17.0"

[dev-dependencies]
pgrx-tests = "=0.17.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
